--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           <li><a href="">About</a></li>
           <li><a href="">Products</a></li>
           <li><a href="">Our Team</a></li>
-          <li class="push"><a href="">Contact</a></li>
+          <li class="push"><a href="">Contact Us</a></li>
       </ul>
   </nav>
   <div class="container"><img class="cover" src="./img/undraw.png"></div>
